unpackaged/main/default/objects/Activity/fields/Activity_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID_18_digit__c</fullName>
    <description>CASESAFEID(Id)</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity ID (18 digit)</label>
    <type>Text</type>
</CustomField>