unpackaged/main/default/objects/Activity/fields/Activity_Type_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_Reporting__c</fullName>
    <description>Workaround for custom Activity Report issue: https://help.salesforce.com/s/articleView?id=000321532&amp;type=1</description>
    <label>Activity Type</label>
    <type>TextArea</type>
</CustomField>