unpackaged/main/default/objects/Activity/fields/Assigned_To_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Manager__c</fullName>
    <description>Pulling in the Owner Manager of an Activity</description>
    <formula>Owner:User.Manager.FirstName &amp; " " &amp; Owner:User.Manager.LastName</formula>
    <label>Assigned To Manager</label>
    <type>Text</type>
</CustomField>