unpackaged/main/default/objects/Activity/fields/Assigned_to_my_team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_my_team__c</fullName>
    <formula>Owner:User.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to my team?</label>
    <type>Checkbox</type>
</CustomField>