unpackaged/main/default/objects/Activity/fields/Assigned_to_running_user__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_running_user__c</fullName>
    <formula>Owner:User.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to running user?</label>
    <type>Checkbox</type>
</CustomField>