unpackaged/main/default/objects/Activity/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Not Answered</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>