unpackaged/main/default/objects/Activity/fields/Call_Purposes__c.field-meta.xml
<CustomField>
    <fullName>Call_Purposes__c</fullName>
    <label>Call Purposes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction Call</fullName>
            </value>
            <value>
                <fullName>Demo Call</fullName>
            </value>
            <value>
                <fullName>Follow-up Call</fullName>
            </value>
            <value>
                <fullName>Support Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>