unpackaged/main/default/objects/Activity/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New_Meeting</fullName>
                <default>true</default>
                <label>New Meeting</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>NBM (New Business Meeting)</fullName>
            </value>
            <value>
                <fullName>TDD (Tech Deep Dive)</fullName>
            </value>
            <value>
                <fullName>BVA (Business Value Assessment)</fullName>
            </value>
            <value>
                <fullName>POV Kickoff</fullName>
            </value>
            <value>
                <fullName>POV Midpoint</fullName>
            </value>
            <value>
                <fullName>POV Wrap up</fullName>
            </value>
            <value>
                <fullName>EB Meeting</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>K6 Intro</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Autoengage reply</fullName>
            </value>
            <value>
                <fullName>POV (Undefined)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>