unpackaged/main/default/objects/Activity/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>This is the CSM Categories from Catalyst</description>
    <inlineHelpText>This is the CSM Categories from Catalyst</inlineHelpText>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>CX Summary</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Quick Chat</fullName>
            </value>
            <value>
                <fullName>Recurring Meeting</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Success Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>