unpackaged/main/default/objects/Activity/fields/Created_By_Title__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Title__c</fullName>
    <formula>CreatedBy.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Title</label>
    <type>Text</type>
</CustomField>