unpackaged/main/default/objects/Activity/fields/Created_By_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Role__c</fullName>
    <formula>CreatedBy.Role_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User Role</label>
    <type>Text</type>
</CustomField>