unpackaged/main/default/objects/Activity/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>T/F on whether a demo occurred or not during this particular call log activity for the Troops.ai integration.</description>
    <inlineHelpText>Did a demo occur during this call?</inlineHelpText>
    <label>Demo?</label>
    <type>Checkbox</type>
</CustomField>