unpackaged/main/default/objects/Activity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>This field captures the Opportunity Stage an Activity was captured on. It's populated by Flow. This field should remain Read Only.</description>
    <inlineHelpText>The Opportunity Stage at the time the Activity was captured</inlineHelpText>
    <label>Opportunity Stage (Stamp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>