unpackaged/main/default/objects/Activity/fields/OpsMgmt__c.field-meta.xml
<CustomField>
    <fullName>OpsMgmt__c</fullName>
    <description>Field For Ops use only</description>
    <formula>Related_Lead__r.OpsMgmt__c</formula>
    <inlineHelpText>Field For Ops use only</inlineHelpText>
    <label>OpsMgmt</label>
    <type>Text</type>
</CustomField>