unpackaged/main/default/objects/Activity/fields/PF_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Order_ID__c</fullName>
    <description>Printfection order reference number</description>
    <externalId>true</externalId>
    <label>PF Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>