unpackaged/main/default/objects/Activity/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Calls (Troops)</relationshipLabel>
    <relationshipName>Related_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>