unpackaged/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>This is a custom Sub Type field to use in conjunction with the OOTB Type field (as the OOTB Sub Type field doesn't allow for customizable picklist values).</description>
    <inlineHelpText>This is a custom Sub Type field to use in conjunction with the OOTB Type field (as the OOTB Sub Type field doesn't allow for customizable picklist values).</inlineHelpText>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autoresponse</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>