unpackaged/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <filterScope>Delegated</filterScope>
    <label>My Delegated Activities</label>
</ListView>